Fix: fixed navlist bg to match navbar bg on mobile

--- a/src/components/ui/hamburger/hamburger.css
+++ b/src/components/ui/hamburger/hamburger.css
@@ -1,9 +1,4 @@
-/* Adjust hamburger menu for dark mode */
-@media screen and (max-width: 768px) {
-    body.dark-mode .nav-links {
-        background-color: #1e1e1e;
-    }
-}
+
 
 .hamburger {
     display: none;
